# earcut

./: .gitignore  Cargo.toml  index_browser.js  index_node.js  package.json
bench/: bench.js
src/: earcut.js  lib.rs
src/assemblyscript/: index.js  loader.js
src/assemblyscript/assembly/: earcut.ts  index.ts  list.ts  point.ts  timsort.ts  utils.ts
