[package]
name = "earcut"
version = "1.0.0"
authors = ["John Firebaugh <john@mapbox.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
typed-arena = "1.4.1"
itertools = "0.7.8"
wasm-bindgen = "0.2.17"

[dev-dependencies]
serde = "1.0.72"
serde_json = "1.0.26"

[profile.release]
debug = false
lto = true
opt-level = 3
